# Chord-Engine

./: .env.example  .gitignore  AUDIT-COMPLETE.md  AUDIT.md  README.md  coverage_output.txt  coverage_target.txt  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts  vitest.config.ts
modules/juce-audio/: CMakeLists.txt  README.md
modules/juce-audio/Source/: Main.cpp  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
modules/juce-audio/Source/Audio/: AudioGraph.cpp  AudioGraph.h  DrumRack.h  MixerBus.cpp  MixerBus.h  SynthRack.h
modules/juce-audio/src/: ChordEngineAudio.cpp  ChordEngineAudio.h  Main.cpp  MixerTrack.cpp  MixerTrack.h  WSServer.cpp  WSServer.h
public/sounds/: index.json
scripts/: scanSoundLibraries.js  soundLibraries.json
src/: App.test.tsx  App.tsx  index.css  main.tsx  setupTests.ts  types.test-d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ArrangementCriticPanel.test.tsx  ArrangementCriticPanel.tsx  DesktopTitlebar.test.tsx  DesktopTitlebar.tsx  LeadSheet.test.tsx  LeadSheet.tsx  NotationView.test.tsx  NotationView.tsx  OneShotSamplerPanel.test.tsx  OneShotSamplerPanel.tsx  PresetBrowser.test.tsx  PresetBrowser.tsx  TransportBar.test.tsx  TransportBar.tsx  WamPluginLoader.test.tsx  WamPluginLoader.tsx  WaveformTimeline.test.tsx  WaveformTimeline.tsx
src/components/instruments/: BassSampleMap.test.tsx  BassSampleMap.tsx  BassTab.test.tsx  BassTab.tsx  DrumsTab.newFeatures.test.tsx  DrumsTab.test.tsx  DrumsTab.tsx  Fretboard.test.tsx  Fretboard.tsx  SoundbankTab.test.tsx  SoundbankTab.tsx  UIPrimitives.test.tsx  UIPrimitives.tsx  bassPresets.test.ts  bassPresets.ts  types.test.ts  types.ts
src/components/views/: InstrumentsView.test.tsx  InstrumentsView.tsx  MixerView.test.tsx  MixerView.tsx  MpcReframerView.test.tsx  MpcReframerView.tsx  OntologyBlenderView.test.tsx  OntologyBlenderView.tsx  PartsView.test.tsx  PartsView.tsx  RhythmGrid.test.tsx  RhythmGrid.tsx  SynthView.test.tsx  SynthView.tsx
src/hooks/: useDrumGrid.test.ts  useDrumSynths.test.ts  useKeyboardShortcuts.test.ts  useKeyboardShortcuts.ts  useMidiHardware.ts  useRecording.test.ts  useRecording.ts  useSoundLibrary.test.ts  useSoundLibrary.ts  useTransport.test.ts  useTransport.ts  useVoiceToMidi.test.ts  useVoiceToMidi.ts
src/lib/: audioBounce.test.ts  audioBounce.ts  engine.test.ts  engine.ts  generatePipeline.test.ts  generatePipeline.ts  midiExport.test.ts  midiExport.ts  persistence.test.ts  persistence.ts  players.test.ts  players.ts  prng.test.ts  prng.ts  tauriBridge.test.ts  tauriBridge.ts  undoHistory.test.ts  undoHistory.ts
src/lib/audio/: bassSampler.test.ts  bassSampler.ts  defaultKit.test.ts  defaultKit.ts  defaultSoundbank.ts  engine.test.ts  engine.ts  oneShotRegistry.test.ts  oneShotRegistry.ts  oneShotSampler.test.ts  oneShotSampler.ts  (+16 more)
src/stores/: generationStore.test.ts  generationStore.ts  projectStore.test.ts  projectStore.ts  uiStore.ts
src/theory/: arcPlanner.test.ts  arcPlanner.ts  critic.test.ts  critic.ts  fixer.test.ts  fixer.ts  fretboard.test.ts  fretboard.ts  harmony.test.ts  harmony.ts  melody.test.ts  melody.ts  pitch.test.ts  pitch.ts  reharm.test.ts  reharm.ts  rhythmicReframer.test.ts  rhythmicReframer.ts  songFraming.test.ts  songFraming.ts  styleAwareCritic.test.ts  styleAwareCritic.ts  voicing.test.ts  voicing.ts
src/types/: waveform-playlist.d.ts
tests/: audio_signal.spec.ts  composition_journey.spec.ts  globalSetup.ts  production.spec.ts  raw_speaker_test.spec.ts  sequencer.spec.ts  smoke.spec.ts
(+19 files in other folders)
